# Watcher

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  LICENSE  METRICS.md  Makefile  QA.md  README.md  SECURITY.md  TODO.md  alembic.ini  auto_flow.sh  automation-playbook.sh  automerge-apply.ps1  bandit.yml  commitlint.config.cjs  constraints.txt  dvc.yaml  example.env  installer.ps1  mkdocs.yml  mypy.ini  noxfile.py  params.yaml  plugins.toml  pr_description.md  pyproject.toml  pytest.ini  pytest_socket.py  requirements-dev.txt  requirements.txt  run.ps1  status_ia.py  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.dvc/: config
.github/: CODEOWNERS  README_AUTOMERGE.md  auto_merge.yml  dependabot.yml  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: guidance.yml
.github/ISSUE_TEMPLATE/: architecture_discussion.yml  bug_report.yml  config.yml  feature_request.yml  maintenance.yml
.github/workflows/: auto-label.yml  automerge.yml  ci.yml  codeql.yml  commitlint.yml  deploy-docs.yml  docker.yml  pip-audit.yml  publish.yml  release-drafter.yml  release.yml  scorecard.yml  secret-scan.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240921_01_create_memory_tables.py
app/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  configuration.py  plugins.toml
app/autopilot/: __init__.py  controller.py  discovery.py  scheduler.py
app/cli/: __init__.py
app/core/: __init__.py  autograder.py  autostart.py  benchmark.py  collector.py  critic.py  engine.py  evaluator.py  first_run.py  learner.py  logging_setup.py  memory.py  model_registry.py  pipeline.py  planner.py  reasoning.py  reproducibility.py  sandbox.py  self_check.py  validation.py
app/data/: __init__.py  pipeline.py  scraper.py  validation.py
app/embeddings/: store.py
app/ingest/: __init__.py  pipeline.py  source_registry.py
app/llm/: __init__.py  client.py  rag.py
app/policy/: __init__.py  ledger.py  manager.py  schema.py
app/scrapers/: __init__.py  github.py  http.py  sitemap.py
app/tools/: __init__.py  embeddings.py  scaffold.py
app/ui/: __init__.py  main.py
app/utils/: __init__.py  autostart.py  metrics.py  np.py  psutil_stub.py
config/: __init__.py  benchmarks.toml  logging.json  logging.yml  policy.yaml  semgrep.yml  settings.dev.toml  settings.prod.toml  settings.toml
datasets/: .gitignore  processed.dvc  raw.dvc
datasets/processed/: simple_linear.csv
datasets/raw/: simple_linear.csv
docs/: CHANGELOG.md  ROADMAP.md  arborescence-cible.md  architecture-plan.md  architecture-summary.md  architecture.md  autonomy_architecture.md  autonomy_gap_analysis.md  autopilot.md  autostart.md  configuration.md  depannage.md  ethics.md  gap-report.md  index.md  logging.md  merge-policy.md  migration-notes.md  mission_audit.md  offline_guide.md  plug_and_play_plan.md  policy-consent.md  public_release_plan.md  quickstart-cli.md  quickstart-sans-commande.md  release_notes.md  requirements.txt  security_provenance.md  tests-plan.md  threat-model.md  validation-commands.md  verifier-artefacts.md
docs/journal/: 2025-09-12.md  2025-09-14.md  (+1 more)
metrics/: bench_thresholds.json  benchmarks-latest.json  benchmarks.jsonl  chat_latency.jsonl  data_pipeline.jsonl  memory_feedback.jsonl  performance_badge.json  train_metrics.txt
migrations/: env.py
numpy/: __init__.py
numpy_stub/: __init__.py
packaging/: watcher.spec
psutil/: __init__.py
scripts/: common.py  export_source_date_epoch.py  install_cli_tools.py  normalize_zip_metadata.py  package_linux.py  package_windows.py  prepare_data.py  setup-local-models.ps1  setup-local-models.sh  static_policy_checks.py  validate_hash.py  validate_schema.py  validate_size.py
tests/: conftest.py  dummy_plugin.py  failing_plugin.py  test_app_config_env.py  test_autograder_atexit.py  test_autograder_paths.py  test_autograder_timeout.py  test_autopilot.py  test_autopilot_controller.py  test_autopilot_discovery.py  test_autostart_artifacts.py  test_autostart_config.py  test_benchmark.py  test_chunk_prompt.py  test_cli.py  test_cli_autopilot.py  test_cli_doctor.py  test_client.py  test_config.py  test_config_invalid_toml.py  test_config_profiles.py  test_critic.py  test_critic_suggestions.py  test_data_pipeline.py  test_docs_ethics.py  test_domain_scrapers.py  test_e2e_offline.py  test_embeddings.py  test_engine_chat.py  test_engine_feedback.py  test_engine_offline.py  test_engine_plugin_metrics.py  test_engine_prepare_data.py  test_evaluator.py  test_first_run.py  test_first_run_autostart.py  test_generate_whitespace.py  test_github_scraper.py  test_http_scraper.py  test_ingest_validation.py  (+39 more)
(+35 files in other folders)
