[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watcher"
version = "0.1.0"
description = "Developer assistant with GUI, plugin sandboxing and benchmarking tools."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Watcher Maintainers" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx==0.27.0",
    "rich==13.7.1",
    "beautifulsoup4==4.12.2",
    "sentence-transformers==2.2.2",
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.9",
    "black==24.8.0",
    "build==1.2.2.post1",
    "codespell==2.3.0",
    "dvc==3.49.0",
    "mypy==1.11.2",
    "nox==2024.4.15",
    "pre-commit==3.8.0",
    "pytest==8.3.2",
    "ruff==0.6.9",
    "semgrep==1.91.0",
]

[project.scripts]
watcher = "app.cli:main"

[project.urls]
Homepage = "https://github.com/francis18georges-png/Watcher"
Documentation = "https://github.com/francis18georges-png/Watcher#readme"
Issues = "https://github.com/francis18georges-png/Watcher/issues"

[tool.setuptools.packages.find]
include = ["app", "app.*", "config", "config.*"]

[tool.setuptools.package-data]
config = ["*.toml", "*.yml"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
